--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@onflow/fcl": "^1.9.0",
+    "@vidstack/react": "^1.11.18",
+    "axios": "^1.6.8",
     "preact": "^10.19.3",
     "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.7.0",
+    "daisyui": "^4.10.2",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.0.8"
   }
 }
